host-kubernetes2/appone/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: appone
  labels:
    app: appone
spec:
  containers:
  - image: nginx:latest
    name: appone-container
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
    resources: {}
