host-kubernetes2/appone/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: appone
  name: appone-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: appone
